fix gallery and display only 2 panel on smaller screen

--- a/src/components/Gallery/style.module.scss
+++ b/src/components/Gallery/style.module.scss
@@ -78,7 +78,7 @@
   }
 }
 @media only screen and (max-width: 640px) {
-  .outerColumn {
-    display: none;
+  .outer {
+    display: none !important;
   }
 }
